--- a/pom.xml
+++ b/pom.xml
@@ -99,16 +99,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jenkinsci.plugins</groupId>
+            <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>git</artifactId>
-            <version>1.1.15</version>
+            <version>1.4.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>org.spearce</groupId>
-            <artifactId>jgit</artifactId>
-            <version>0.4-47e4af3</version>
-            <type>jar</type>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>2.2.0.201212191850-r</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.main</groupId>
